--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.ProgressActivity"/>
+        <activity android:name=".activity.SearchActivity"/>
         <activity android:name=".activity.ProfileActivity"/>
+
         <activity android:name=".activity.KeyNoteActivity"/>
         <activity android:name=".activity.VideoActivity"/>
         <activity android:name=".activity.ShiJuanActivity1"/>
