--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,13 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     //Circle Profile
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':vitamio')
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
